<resources>
    <string name="app_name">Tests</string>
    <string name="repo_full_name">repo full name</string>
    <string name="search_hint">Enter keyword e.g. android</string>
    <string name="enter_search_word">Enter search word</string>
    <string name="results_count">Number of results: %d</string>
    <string name="undefined_error">Undefined error</string>
    <string name="decrement_text">-</string>
    <string name="increment_text">+</string>
    <string name="to_details">to details</string>
    <string name="test_value_espresso">Number of results: 42</string>
    <string name="test_value_automator">Number of results: 42</string>
    <string name="build_flavour">.fake</string>
    <string name="search">search</string>
    <string name="test_value">Number of results: 42</string>
</resources>
